syntax = "proto3";

package blog_agent.v1;

// Blog Agent Service - 處理對話紀錄轉換為部落格文章
service BlogAgentService {
  // 處理對話紀錄並生成部落格文章
  rpc ProcessConversation(ProcessConversationRequest) returns (ProcessConversationResponse);
  
  // 列出所有已處理的對話紀錄
  rpc ListConversationLogs(ListConversationLogsRequest) returns (ListConversationLogsResponse);
  
  // 取得特定的對話紀錄
  rpc GetConversationLog(GetConversationLogRequest) returns (GetConversationLogResponse);
  
  // 取得生成的部落格文章
  rpc GetBlogPost(GetBlogPostRequest) returns (GetBlogPostResponse);
  
  // 取得部落格文章（包含結構化的 content blocks 和 prompt meta，用於 UI/UX）
  // 變更：新增 conversation_messages 欄位，content_blocks 保留但設為空（向後兼容）
  rpc GetBlogPostWithPrompts(GetBlogPostRequest) returns (GetBlogPostWithPromptsResponse);
  
  // 列出所有部落格文章
  rpc ListBlogPosts(ListBlogPostsRequest) returns (ListBlogPostsResponse);
  
  // 取得處理歷史
  rpc GetProcessingHistory(GetProcessingHistoryRequest) returns (GetProcessingHistoryResponse);
}

// ... existing messages remain the same ...

// 取得部落格文章請求
message GetBlogPostRequest {
  string blog_post_id = 1;                 // 部落格文章 ID (UUID)
}

// 取得部落格文章回應
message GetBlogPostResponse {
  BlogPost blog_post = 1;
}

// 取得部落格文章（包含 prompts）回應
// 變更說明：
// - content_blocks: 保留欄位但設為空陣列（向後兼容，不再用於新文章）
// - conversation_messages: 新增欄位，包含原始對話訊息
message GetBlogPostWithPromptsResponse {
  BlogPost blog_post = 1;
  repeated ContentBlock content_blocks = 2;  // 保留但設為空（向後兼容）
  repeated ConversationMessage conversation_messages = 3;  // 新增：原始對話訊息
  repeated PromptSuggestion prompt_suggestions = 4;  // 新增：提示詞建議（可選）
}

// ... existing messages remain the same ...

// 對話訊息（新增，用於前端顯示原始對話內容）
message ConversationMessage {
  string role = 1;                    // "user", "system", "assistant"
  string content = 2;                // 訊息內容（Markdown 格式）
  string timestamp = 3;               // 可選：ISO 8601 timestamp
}

// Prompt 建議（新增，用於前端顯示提示詞分析）
message PromptSuggestion {
  string id = 1;                       // UUID
  string original_prompt = 2;         // 原始提問
  string analysis = 3;                // AI 診斷
  repeated PromptCandidate better_candidates = 4;  // 優化建議候選
  string expected_effect = 5;          // 預期效果說明
}

// ... rest of existing messages remain the same ...
